--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,82 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.row-wrapper{
+display: flex;
+align-items: center;
+margin: auto;
+}
+
+.gap-40{
+  gap: 60px
+}
+
+.width-60
+{
+
+width: 80px;
+}
+
+
+.gap-500 {
+  gap: 260px
+}
+
+input[type="number"]
+{
+  background: none;
+  border: none;
+  border-bottom: 4px dashed rgb(248, 0, 103);
+  width: 60px;
+  text-align: center;
+  padding-bottom: 6px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.gap-20 {
+  gap: 20px
+}
+
+.col-wrapper {
+  display: flex;
+  flex-direction:column;
+  align-items:center;
+  margin: auto;
+}
+
+.center-wrapper{
+ height: 100vh;
+ width: 100vw;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ background-color: rgb(253, 198, 216);
+}
+
+.circle{
+  background-color: rgb(248, 0, 103);
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+
+.square{
+  height: 250px;
+  width: 250px;
+  border-radius: 20px;
+  border: 6px dashed rgb(248, 0, 103);
+  
+}
+
+input[type="range"]
+{
+  width: 200px;
+  accent-color: rgb(248, 0, 103);
+}
+
+.footer{
+  position: absolute;
+  bottom: 0;
+}
